--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
   "name": "twitchbot",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "This is a twitch bot",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "sebastian-gryczan",
   "license": "ISC",
   "dependencies": {
     "express": "^4.10.2",
+    "http": "0.0.0",
+    "socket.io": "^1.4.8",
     "tmi.js": "^1.1.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sebastian-gryczan/node-marbles.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sebastian-gryczan/node-marbles/issues"
+  },
+  "homepage": "https://github.com/sebastian-gryczan/node-marbles#readme"
 }
