--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a twitch bot",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node marbles.js"
   },
   "author": "sebastian-gryczan",
   "license": "ISC",
